# pforth

./: !Boot,feb  !Help  !MakeDist,feb  !Run,feb  !RunImage  !RunImage,ff8  !Sprites,ff9  .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  README  README.md  bootstrap.conf  configure.ac
!pForth/: !Boot,feb  !Run,feb  !RunImage,ff8  !TestBuild,feb
.github/workflows/: c-cpp.yml
build-aux/: .gitignore  appveyor-install.sh  fix-links-windows.sh  install-executor
doc/: .gitignore  Hybrid language  InputStack  Makefile.am  Mini language  OOF  PartialEval  TODO.txt  Threading  ToDo  aforth.tex  base.tex  discussion.tex  extensions.tex  gnat2.txt  ideas.md  pforth.tex
extras/: DoubleARM.txt  Makefile.am  ackermann.fs  armfpasm.fs  redefinition.fs  string.fs  tests.fb  tests.fs
m4/: gnulib-cache.m4
old/: code  funclua.lua  gnat.w  gnatc  lu  parse.py
old/c/: configure.ac
old/c/src/: Makefile.am  buffer.c  buffer.h  gnat  gnat.c  gnat.h  memory.h  mk  stream.c  stream.h  vector.c  vector.h
old/java/sources/org/sc3d/apt/gnat/: C.txt  Instruction.java  Operand.java  Session.java  State.java  Value.java  compile
programs/: Blks>Text  DoubleARM,ffb  Text>Blks  armasm.fs  blockedit.fs  extensions.fs  mandelbrot.fs  multbuffer.fs  riscforth.fs  rofile.fs  sieves.fs
src/: .gitignore  Makefile.am  accept.fs  add-relocate-helpers.fs  armasm.fs  assembler.fs  compiler-asm.fs  compiler-defer.fs  compiler-postpone.fs  compiler2.fs  compiler4.fs  compiler5.fs  control1.fs  control2.fs  control3.fs  defer-fetch-store.fs  defining.fs  does.fs  fileio.fs  gnat.s  highlevel.fs  highlevel.fs.in  host.am  host_src.am  init-space.fs  initialize.fs  interpreter3.fs  interpreter4.fs  make-base.fs  make.fs  mangle.fs  native-branch.fs  native-call.fs  opcodes.fs  os-compiler.fs  os.fs  parse-command-line.fs  pforth.in  pforth.s  pforthi.in  (+14 more)
src/!pForth/: !Boot,feb  !RunImage,ff8  !Sprites,ff9  SHA256SUMS  rpcemu.patch  run-rpcemu
src/!pForth/hostfs/: !Boot,ffe  IfType,ffc  diff,ff8
src/!pForth/rpcemu/: cmos.ram  rpc.cfg
src/arm/: .gitignore  assembler.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  compiler2.fs  file.fs  fileio.fs  highlevel.fs  initialize.fs  machdeps-pre.fs  machdeps.fs  make.fs  meta.fs  os-primitives.fs  os.fs  platform.fs  primitives.fs  save.fs  target-forth.fs  terminal.fs
src/bee/: Makefile.am  accept.fs  assembler.fs  bracket-does.fs  code.fs  compiler-asm.fs  compiler-defer.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  extra-primitives.fs  fileio.fs  initialize.fs  mangle.fs  native-call.fs  opcodes.fs  pforth  pforth-64  primitives.fs  relocate-compiler.fs  save.fs  util.fs  vocabulary.fs
src/beetle/: Makefile.am  aForthImage  aForthImage,ffd  accept.fs  add-relocate-helpers.fs  assembler.fs  bracket-does.fs  code.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  extra-primitives.fs  fileio.fs  highlevel.fs  init-space.fs  initialize-stacks.fs  initialize.fs  mImg,ffd  mImg.txt  mImg2,ffd  mImg2.txt  machdeps.fs  make.fs  meta.fs  native-branch.fs  native-call.fs  os-compiler.fs  os.fs  pForthImage  parse-command-line.fs  pforth  pforth-base  pforth-base.img  pforth.img  platform.fs  primitives.fs  relocate-helper.fs  resolver-branch.fs  save.fs  system-params.fs  (+3 more)
src/mit/: add-relocate-helpers.fs  assembler.fs  bracket-does.fs  code.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  compiler4.fs  compiler5.fs  control3.fs  does.fs  extra-primitives.fs  fileio.fs  init-space.fs  initialize.fs  inner-interpreter.fs  interpreter3.fs  native-call.fs  pforth  pforth-base  platform.fs  primitive-bracket-does.fs  primitives.fs  resolver-branch.fs  save.fs  skip-does-link.fs  strings2b.fs  system-params.fs  util-postpone.fs  util.fs  will-do.fs
src/mit-threaded/: Makefile.am  add-relocate-helpers.fs  assembler.fs  code.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  control1.fs  extra-primitives.fs  fileio.fs  init-space.fs  initialize.fs  inner-interpreter.fs  native-branch.fs  native-call.fs  os.fs  pforth  pforth-base  platform.fs  primitives.fs  relocate-compiler.fs  relocate-helper.fs  relocate.fs  resolver-branch.fs  save.fs  strings2a.fs  strings2b.fs  system-params.fs  target-forth.fs  util.fs
src/riscos/: (does).fs  Makefile.am  accept.fs  add-relocate-helpers.fs  assembler.fs  bracket-does.fs  code.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  control2.fs  defer-fetch-store.fs  does-resolver.fs  extra-primitives.fs  fileio.fs  initialize-stacks.fs  initialize.fs  interpreter4.fs  make.fs  os-compiler.fs  os.fs  pForthImage  parse-command-line.fs  pforth  pforth-base  pforth-base.img  pforth.img  platform.fs  primitives.fs  resolver-branch.fs  resolver.fs  save.fs  system-params.fs  target-forth.fs  target-util.fs  terminal.fs  throw-contents.fs  util.fs
src/smite/: Makefile.am  accept.fs  assembler.fs  bracket-create.fs  bracket-does.fs  compiler-postpone.fs  compiler.fs  compiler1.fs  defining.fs  does-resolver.fs  does.fs  extra-primitives.fs  fileio.fs  init-space.fs  initialize.fs  make-base.fs  os-compiler.fs  parse-command-line.fs  pforth-base  pforth-base.img  platform.fs  primitives.fs  resolver-branch.fs  save.fs  skip-does-link.fs  target-util.fs  terminal.fs  util-postpone.fs  util.fs
